--- a/index.html
+++ b/index.html
@@ -1,10 +1,162 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <!-- Site style and title -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Mr.Pesik</title>
+	
+	<!--Photo-->
+	<link rel="stylesheet" href="jquery.justified.css">
+	
   </head>
+
   <body>
-    ― Hello World! &#x1F609;
+    <!-- Top navbar -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#top">
+        Mr.Pesik
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link header-navbar-link" href="#history">История</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link header-navbar-link" href="#photo">Фото</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link header-navbar-link" href="#contacts">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Top section -->
+    <section class="site-section site-header" id="top">
+      <div class="top-content">
+		<br><br><br><br><br><br><br>
+        <p class="section-content-text" id="hello">
+          Добро пожаловать на сайт Жороньки, маленького милого песика, который любит жить в одеяле и грызть огурцы.<br>
+		  Листай дальше и наслаждайся :)
+        </p>
+        <br><br><br><br><br><br><br>
+      </div>
+    </section>
+
+    <!-- Section: agenda -->
+    <section id="history" class="site-section site-history">
+      <br><br><br><br>
+     <h3 class="section-header-text">История такая</h3> 
+      <br><br>
+
+      <div class="container">
+        <ul class="timeline">
+          <li>
+            <div class="timeline-badge peach agenda-time"><strong>2006</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">18 мая родился самый милый песик во вселенной.</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-badge peach agenda-time"><strong>2007</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">В погоне за котиком выбито оконное стекло и разрезана вена. Откачали. Со временем пёсище осознал, что приподнятая лапка и грустные глаза решают любую проблему. Был пойман на лжи спустя пару месцев (перепутал лапку).</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">Theme3</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">Theme4</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">Theme5</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">Theme6</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <br><br>
+    </section>
+
+
+    <!-- Section: photos -->
+    <section id="photo" class="site-section site-photo">
+      <div class="container">
+        <br><br><br><br>
+		<h3 class="section-header-text">Фоточки</h3>
+        <br>
+			<div class="image-container"></div>
+        <br><br><br><br>
+      </div>
+    </section>
+
+    <!-- Section: contacts -->
+    <section id="contacts" class="site-section site-contacts">
+      <div class="container">
+        <br><br><br><br>
+        <h3 class="section-header-text">Пришли письмо пёсику</h3>
+        <br>
+		<p class="section-content-text">
+			mr.pesik.j@gmail.com<br>
+			<a href="https://www.facebook.com/mr.pesik" target="_blank">
+				<i class="fa fa-facebook-square fa-2x"></i>
+			</a>
+		</p>
+        <br><br><br><br>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <div class="site-section site-footer" id="bottom">
+      J | 2019
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- Site JS -->
+	<script src="jquery.justified.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
