Сайт на коленке. Done.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="timeline-badge peach agenda-time"><strong>2006</strong></div>
             <div class="timeline-panel agenda-panel">
               <div class="timeline-body">
-                <p class="agenda-text">18 мая родился самый милый песик во вселенной.</p>
+                <p class="agenda-text">18 мая родился самый милый песик во вселенной. Тут то все и началось :)</p>
               </div>
             </div>
           </li>
@@ -79,37 +79,45 @@
             </div>
           </li>
           <li>
-            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-badge peach agenda-time"><strong>2008</strong></div>
             <div class="timeline-panel agenda-panel">
               <div class="timeline-body">
-                <p class="agenda-text">Theme3</p>
+                <p class="agenda-text">Полёт нормальный. Щенок подрос, получил отдельную комнату и мягкий диванчик. Требует в пользование половину хозяйской кровати.</p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
-            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-badge peach agenda-time"><strong>2016</strong></div>
             <div class="timeline-panel agenda-panel">
               <div class="timeline-body">
-                <p class="agenda-text">Theme4</p>
+                <p class="agenda-text">Наелся пчёл, из-за аллергии вылезла шерсть на спине. Выглядит довольно весело. Никто не понимает, ржать с него или жалеть.</p>
               </div>
             </div>
           </li>
           <li>
-            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-badge peach agenda-time"><strong>2017</strong></div>
             <div class="timeline-panel agenda-panel">
               <div class="timeline-body">
-                <p class="agenda-text">Theme5</p>
+                <p class="agenda-text">Ударился где-то ухом. Спустя море слез, усилий и швов ухо вылечено. Выглядит довольно кучеряво. </p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
-            <div class="timeline-badge peach agenda-time"><strong>00</strong></div>
+            <div class="timeline-badge peach agenda-time"><strong>2018</strong></div>
             <div class="timeline-panel agenda-panel">
               <div class="timeline-body">
-                <p class="agenda-text">Theme6</p>
+                <p class="agenda-text">Долгий и очень переживательный период. Если коротко, мы победили рак :)</p>
               </div>
             </div>
           </li>
+          <li>
+            <div class="timeline-badge peach agenda-time"><strong>2019</strong></div>
+            <div class="timeline-panel agenda-panel">
+              <div class="timeline-body">
+                <p class="agenda-text">Пёс получил большущую банку витаминов и пообещал жить вечно. Скоро будем праздновать 13й день рождения самого лучшего пёсика. Дали будэ ;) </p>
+              </div>
+            </div>
+          </li>		  
         </ul>
       </div>
 
@@ -121,7 +129,7 @@
     <section id="photo" class="site-section site-photo">
       <div class="container">
         <br><br><br><br>
-		<h3 class="section-header-text">Фоточки</h3>
+		<h3 class="section-header-text">Мягенький щинчик</h3>
         <br>
 			<div class="image-container"></div>
         <br><br><br><br>
